# cura-qidi-legacy-network

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
cura_plugin/QidiLegacyNetwork/: __init__.py  config.py  extension.py  output_device.py  plugin.json  plugin.py  registration.py  upload_job.py
docs/: architecture.md  cura-5.13-development.md  hardware-test-plan.md  protocol.md
scripts/: install_cura_plugin.py
src/qidi_legacy/: __init__.py  cli.py  client.py  discovery.py  exceptions.py  framing.py  mock_printer.py  models.py  parsing.py  transport.py
tests/: test_client_errors.py  test_cura_plugin_installer.py  test_cura_plugin_registration.py  test_framing.py  test_mock_integration.py  test_parsing.py  test_transport.py
