[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qidi-legacy-cura"
version = "0.1.0"
description = "Legacy QIDI UDP protocol client and Cura 5 network plugin for printers such as the QIDI i-Fast"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gabe Evanoff"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
qidi-legacy = "qidi_legacy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qidi_legacy"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
